# nationwide-test

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/nationwide_test/: config.py  main.py  schema.py  utils.py
tests/nationwide_test/: test_schema.py  test_utils.py
workflows/: test_package.yml
